--- a/menu/content/ambient-menu-style.css
+++ b/menu/content/ambient-menu-style.css
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     gap: 2px;
+    align-items: center;
 }
 
 .festive-banner .holiday-message {
@@ -32,11 +33,12 @@
     text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
 }
 
-.festive-banner .update-info {
-    font-size: 0.8em;
+.update-info {
+    font-size: 0.7em;
     opacity: 0.9;
     border-top: 1px solid rgba(255,255,255,0.2);
     padding-top: 2px;
+    text-align: center;
 }
 
 @keyframes festiveGradient {
@@ -626,6 +628,7 @@ small {
     display: flex;
     flex-direction: column;
     gap: 2px;
+    align-items: center;
 }
 
 /* Large screens (desktop) */
@@ -716,4 +719,5 @@ small {
     opacity: 0.9;
     border-top: 1px solid rgba(255,255,255,0.2);
     padding-top: 2px;
+    text-align: center;
 }
